i made the moveset more randomized, added power up ability, changed healing properties, added new method called opponent move, i fixed the death voicelines not working, fixed continuation of loop even when ended, debugged code entirely, made code logical and therefore playable